# ising_eth

./: .gitignore  README.md  eig.ipynb  pyproject.toml
